--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -71,7 +71,6 @@ ncnn_add_layer(Concat)
 ncnn_add_layer(Convolution)
 ncnn_add_layer(Crop)
 ncnn_add_layer(Deconvolution)
-ncnn_add_layer(DeformableConv2D)
 ncnn_add_layer(Dropout)
 ncnn_add_layer(Eltwise)
 ncnn_add_layer(ELU)
@@ -156,6 +155,7 @@ ncnn_add_layer(DeconvolutionDepthWise1D)
 ncnn_add_layer(Deconvolution3D)
 ncnn_add_layer(DeconvolutionDepthWise3D)
 ncnn_add_layer(Einsum)
+ncnn_add_layer(DeformableConv2D)
 
 if(NCNN_VULKAN)
     ncnn_add_shader(${CMAKE_CURRENT_SOURCE_DIR}/convert_ycbcr.comp)
@@ -470,6 +470,11 @@ endif()
 if(NCNN_COVERAGE)
     target_compile_options(ncnn PUBLIC -coverage -fprofile-arcs -ftest-coverage)
     target_link_libraries(ncnn PUBLIC -coverage -lgcov)
+endif()
+
+if(NCNN_ASAN)
+    target_compile_options(ncnn PUBLIC -fsanitize=address)
+    target_link_libraries(ncnn PUBLIC -fsanitize=address)
 endif()
 
 add_dependencies(ncnn ncnn-generate-spirv)
